# Wiki-FSA

./: .$FSA控制框图.drawio.bkp  .$FSA控制框图.drawio.dtmp  .gitignore  .gitmodules  FSA使用参考.md  FSA控制框图.drawio  README.en.md  README.md  README_CN.md
sdk-cpp/V4/source/: CMakeLists.txt  demo_clear_fault.cpp  demo_comm_config_get.cpp  demo_comm_config_set.cpp  demo_control_current_mode.cpp  demo_control_param_get.cpp  demo_control_param_imm_get.cpp  demo_control_param_imm_set.cpp  demo_control_param_set.cpp  demo_control_position_ff_mode.cpp  demo_control_position_mode.cpp  demo_control_velocity_mode.cpp  demo_ctrl_config_get.cpp  demo_ctrl_config_save.cpp  demo_ctrl_config_set.cpp  demo_disable_set.cpp  demo_enable_set.cpp  demo_flag_of_operation_get.cpp  demo_flag_of_operation_set.cpp  demo_get_abs_encoder_value.cpp  demo_get_pvc.cpp  demo_get_pvcc.cpp  demo_get_pvcccc.cpp  demo_get_state.cpp  demo_home_offset_get.cpp  demo_home_offset_set.cpp  demo_home_position_set.cpp  demo_lookup.cpp  demo_lookup_abs_encoder.cpp  demo_lookup_actuator.cpp  demo_lookup_ctrlbox.cpp  demo_new_motor_test.cpp  demo_ota.cpp  demo_ota_cloud.cpp  demo_ota_devel.cpp  demo_ota_driver_cloud.cpp  demo_ota_driver_test.cpp  demo_ota_test.cpp  demo_pid_param_get.cpp  demo_pid_param_imm_get.cpp  (+8 more)
sdk-cpp/v2/: CMakeLists.txt
sdk-cpp/v2/doc/: Doxyfile
sdk-cpp/v2/examples/: 01_lookup.cpp  02_playback.cpp  03_feedback.cpp  04_command.cpp  05_feedback_command_async.cpp  06_latency_test.cpp  07_set_position_pt.cpp  08_pos_pass_through.cpp  reset_linear_count.cpp  set_input_velocity_pt_for_fw2xx.cpp  set_velocity_for_fw1xx.cpp
sdk-cpp/v2/fourier/: CMakeLists.txt
sdk-cpp/v2/src/: group.cpp  group.hpp  groupCommand.cpp  groupCommand.hpp  groupFeedback.cpp  groupFeedback.hpp  lookup.cpp  lookup.hpp  util.hpp  version.cpp  version.hpp
sdk-cpp/v3/example/: CMakeLists.txt  demo_allinone.cpp
sdk-cpp/v4/source/: CMakeLists.txt  demo_.cpp  demo_clear_fault.cpp  demo_comm_config_get.cpp  demo_comm_config_set.cpp  demo_control_current_mode.cpp  demo_control_param_get.cpp  demo_control_param_imm_get.cpp  demo_control_param_imm_set.cpp  demo_control_param_set.cpp  demo_control_position_ff_mode.cpp  demo_control_position_mode.cpp  demo_control_velocity_mode.cpp  demo_ctrl_config_get.cpp  demo_ctrl_config_save.cpp  demo_ctrl_config_set.cpp  demo_disable_set.cpp  demo_enable_set.cpp  (+38 more)
v2/: CMakeLists.txt  demo_comm_config_get.py  demo_comm_config_set.py  demo_control_current_mode.py  demo_control_param_get.py  demo_control_param_imm_get.py  demo_control_param_imm_set.py  demo_control_param_set.py  demo_control_position_ff_mode.py  demo_control_position_mode.py  demo_control_position_mode_pd.py  demo_ctrl_config_save.py  demo_ctrl_config_set.py  demo_disable_set.py  demo_enable_set.py  demo_fast_control_current_mode.py  demo_fast_set_disable.py  demo_fast_set_enable.py  demo_fast_set_pd_mode.py  demo_get_fsa_abs_position.py  demo_get_ntc_temperature.py  demo_get_pvcccc.py  demo_get_pvct.py  demo_get_state.py  demo_home_offset_get.py  demo_home_offset_set.py  demo_home_position_set.py  demo_lookup.py  demo_new_motor_test.py  demo_ota_cloud.py  demo_ota_devel.py  demo_ota_driver.py  demo_ota_driver_devel.py  demo_ota_driver_test.py  demo_pid_param_imm_get.py  demo_pid_param_imm_set.py  demo_pid_param_set.py  demo_reboot.py  demo_set_calibrate_encoder.py  demo_set_fsa_abs_zero.py  (+4 more)
v2/config/: config.json
v2/example/: demo_clear_fault.py  demo_comm_config_get.py  demo_comm_config_set.py  demo_comm_driver_firmware_version_get.py  demo_comm_driver_version_get.py  demo_comm_firmware_version_get.py  demo_control_current_mode.py  demo_control_param_get.py  demo_control_param_imm_get.py  demo_control_param_imm_set.py  demo_control_param_set.py  demo_control_position_ff_mode.py  demo_control_position_mode.py  demo_control_position_mode_pd.py  demo_control_velocity_mode.py  demo_ctrl_config_get.py  demo_ctrl_config_save.py  demo_ctrl_config_set.py  demo_ctrl_get_pvc_group.py  demo_disable_set.py  demo_enable_set.py  demo_fast_control_current_mode.py  demo_fast_control_position_mode.py  demo_fast_control_velocity_mode.py  demo_fast_get_error.py  demo_fast_get_foc_target_pvc.py  demo_fast_get_friction_FFD.py  demo_fast_get_ntc_temp.py  demo_fast_get_pvc.py  demo_fast_get_pvct.py  demo_fast_get_pvct_error.py  demo_fast_get_vbus.py  demo_fast_get_watchdog.py  demo_fast_set_ack_clear_fault.py  demo_fast_set_ack_control_loop_freq_div.py  demo_fast_set_ack_disable.py  demo_fast_set_ack_enable.py  demo_fast_set_ack_friction_FFD.py  demo_fast_set_ack_interface_filter_fc.py  demo_fast_set_ack_pd_imm.py  (+64 more)
v2/include/: fsa.h  fsa_list_v2.h  function_result.h  logger.h  main.h  os.h
v2/pyscurve/: __init__.py  trajectory.py
v2/src/: fsa.cpp  os.cpp
v3/: CMakeLists.txt
v3/example/: CMakeLists.txt
v3/include/: Fsa.h  FsaJsonData.h  FsaSocket.h
v3/src/: Fsa.cpp  FsaJsonData.cpp  FsaSocket.cpp
v4/: .clang-format  .gitignore  CMakeLists.txt
v4/example/: CMakeLists.txt  demo_control_param_imm_set.cpp  demo_control_param_set.cpp  demo_control_position_mode.cpp  demo_control_velocity_mode.cpp  demo_ctrl_config_get.cpp  demo_disable_set.cpp  demo_get_measured.cpp  demo_get_pvc.cpp  demo_home_offset_set.cpp  demo_home_position_set.cpp  demo_lookup.cpp  demo_lookup_abs_encoder.cpp  demo_lookup_actuator.cpp  demo_ota_cloud.cpp  demo_ota_driver.cpp  demo_ota_driver_cloud.cpp  demo_ota_driver_test.cpp  demo_ota_test.cpp  demo_pid_param_get.cpp  demo_reboot.cpp  demo_set_encrypt.cpp  fsa_list.cpp
v4/include/: fsa.h  logger_level.h  logger_state.h
v4/source/: demo_clear_fault.cpp  demo_comm_config_get.cpp  demo_control_param_get.cpp  demo_control_param_imm_set.cpp  demo_control_position_mode.cpp  demo_control_velocity_mode.cpp  demo_ctrl_config_set.cpp  demo_disable_set.cpp  demo_get_measured.cpp  demo_get_pvcc.cpp  demo_get_pvcccc.cpp  demo_get_state.cpp  demo_home_offset_set.cpp  demo_home_position_set.cpp  demo_lookup.cpp  demo_lookup_actuator.cpp  demo_ota_devel.cpp  demo_reboot_actuator.cpp  fsa_list_v2.cpp  os.cpp
v4/src/: fsa.cpp  logger.cpp
(+689 files in other folders)
